--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400" rel="stylesheet">
   <style>
     body {
-  background-color: #6299ff;
+  background-color: #97b7d0;
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -17,12 +17,12 @@
 
 .card {
   display: flex;
-  height: 480px;
+  height: 350px;
   width: 200px;
-  background-color: #0e5bd6;
+  background-color: #3466b8;
   border-radius: 10px;
-  box-shadow: 0rem 0 1rem #000;
-/*   margin-left: -50px; */
+  box-shadow: 0rem 0 1rem rgb(25, 60, 97);
+margin-top: 150px;
   transition: 0.4s ease-out;
   position: relative;
   left: 0px;
@@ -72,7 +72,7 @@
   width: 0px;
   height: 100%;
   background: rgb(0,154,217);
-  background: linear-gradient(90deg, rgba(0,154,217,1) 0%, rgba(217,147,0,1) 65%, rgba(255,186,0,1) 100%);
+  background: linear-gradient(90deg, rgba(0,154,217,1) 0%, rgb(56, 234, 130) 65%, rgb(217, 196, 5) 100%);
   transition: 0.6s ease-out;
 }
 
@@ -87,15 +87,10 @@
   left: calc(50% - 60px);
 }
 
-.stroke {
-  stroke: white;
-  stroke-dasharray: 360;
-  stroke-dashoffset: 360;
-  transition: 0.6s ease-out;
-}
+
 
 svg {
-  fill: #15141d;
+  fill: #000000;
   stroke-width: 2px;
 }
 
